--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul id="navbar">
         <li><img class="home-logo" src="./assets/img/kiet-biblogo.png" alt="logo"></li>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./Course.html">Student Details</a></li>
+        <li><a href="./Course.html">Course Details</a></li>
         <li><a href="./reg.html">Register</a></li>
         <li><a href="./login.html">Login</a></li>
     </ul>
